# distaff

./: Cargo.toml  LICENSE  README.md
benches/: all.rs  fft.rs  field.rs  hash.rs  math.rs  polynom.rs  polys.rs
docs/: README.md  assembly.md  isa.md  programs.md
specs/: README.md  assembly.md  isa.md
src/: lib.rs  main.rs
src/crypto/: blake2s.rs  fft.rs  hash.rs  math.rs  merkle.rs  mod.rs  polys.rs  quartic.rs
src/examples/: collatz.rs  comparison.rs  conditional.rs  fibonacci.rs  merkle.rs  mod.rs  range.rs  utils.rs
src/math/: fft.rs  field.rs  mod.rs  parallel.rs  polynom.rs  polys.rs  quartic.rs
src/math/field/: mod.rs  prime128.rs  prime64.rs
src/math/field2/: mod.rs  prime64.rs
src/processor/: assembler.rs  decoder.rs  mod.rs  opcodes.rs  opcodes2.rs  processor2.rs  tests.rs
src/processor/assembly/: errors.rs  mod.rs  parsers.rs  tests.rs
src/processor/decoder/: mod.rs  tests.rs
src/processor/program/: execution_graph.rs  graph.rs  inputs.rs  mod.rs
src/processor/stack/: mod.rs
src/processor/tests/: comparisons.rs  mod.rs
src/program/: mod.rs  opcodes.rs
src/programs/: graph.rs  hashing.rs  inputs.rs  mod.rs
src/programs/assembly/: errors.rs  mod.rs  parsers.rs  tests.rs
src/programs/blocks/: mod.rs  tests.rs
src/programs/program2/: flow.rs  hashing.rs  mod.rs  span.rs  tests.rs
src/programs/tests/: mod.rs  utils.rs
src/stark/: README.md  inputs.rs  mod.rs  options.rs  proof.rs  prover.rs  verifier.rs
src/stark/constraints/: README.md  acc_hash.rs  composition_poly.rs  constraint_poly.rs  constraint_polys.rs  constraint_table.rs  decoder.rs  decoder2.rs  evaluator.rs  hash_acc.rs  mod.rs  prng_coefficients.rs  stack.rs  utils.rs
src/stark/fri/: README.md  fri_proof.rs  mod.rs  proof.rs  prover.rs  tests.rs  utils.rs  verifier.rs
src/stark/trace/: README.md  acc_hash.rs  decoder.rs  (+9 more)
src/tests/: branches.rs  comparisons.rs  mod.rs
src/trace/: mod.rs  stack.rs
src/utils/: acc_hash.rs  accumulator.rs  hasher.rs  mod.rs  sponge.rs
(+64 files in other folders)
