[package]
name = "distaff"
version = "0.1.0"
authors = ["Bobbin Threadbare <bobbinth@protonmail.com>"]
edition = "2018"
repository = "https://github.com/GuildOfWeavers/distaff"
license = "MIT"

[lib]
name = "distaff"
path = "src/lib.rs"

[[bench]]
name = "all"
harness = false

[dependencies]
hex = "0.4.2"
rand = "0.7.3"
blake3 = "0.3.2"
num_cpus = "1.13.0"
crossbeam-utils = "0.7.2"
bincode = "1.2.1"
serde = { version = "1.0.106", features = ["derive"] }

[dev-dependencies]
criterion = "0.3.1"