[package]
name = "distaff"
version = "0.3.0"
authors = ["Bobbin Threadbare <bobbinth@protonmail.com>"]
edition = "2018"
description="Zero-knowledge virtual machine written in Rust"
readme="https://github.com/GuildOfWeavers/distaff/blob/master/README.md"
repository = "https://github.com/GuildOfWeavers/distaff"
license = "MIT"

[lib]
name = "distaff"
path = "src/lib.rs"

[[bench]]
name = "all"
harness = false

[dependencies]
hex = "0.4.2"
rand = "0.7.3"
blake3 = "0.3.3"
sha3 = "0.8.2"
crossbeam-utils = "0.7.2"
bincode = "1.2.1"
serde = { version = "1.0.110", features = ["derive"] }
log = "0.4.8"
env_logger = "0.7.1"

[dev-dependencies]
criterion = "0.3.2"
num-bigint = "0.2.6"